Moved from `requirements.txt` to Pipenv for local development and (automated) testing and added support for Python 3.7

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,8 +4,11 @@ include *.md
 # Include the license file
 include LICENSE.txt
 
-# Include the `requirements.txt` file
-include requirements.txt
+include Makefile
+
+# Include Pipenv files
+include Pipfile
+include Pipfile.lock
 
 # Include GEDCOM test files
 include tests/files/*.ged
