--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,16 @@ matrix:
       env: TOXENV=py35
     - python: '3.6'
       env: TOXENV=py36
+    # Currently not supported by Travis
+    #- python: '3.7'
+    #  env: TOXENV=py37
 
-install: pip install tox
+# Command to install dependencies
+install: "make"
 
-script: tox
+# Command to run tests
+script:
+  - make test
 
 notifications:
   email: false
