--- a/tox.ini
+++ b/tox.ini
@@ -4,23 +4,26 @@
 #     confirm required package meta-data in setup.py
 
 [tox]
-envlist = py{27,34,35,36}
+envlist = py{27,34,35,36,37}
+recreate = True
 
 [testenv]
+setenv =
+    LC_ALL = en_US.utf-8
+    LANG = en_US.utf-8
 basepython =
     py27: python2.7
     py34: python3.4
     py35: python3.5
     py36: python3.6
-deps =
-    check-manifest
-    flake8
-    pytest
+    py37: python3.7
+deps = pipenv
 commands =
-    check-manifest --ignore tox.ini,tests*
-    python setup.py check -m -s
-    flake8 .
-    py.test tests
+    pipenv install --dev
+    pipenv run check-manifest --ignore tox.ini,tests*
+    pipenv run python setup.py check -m -s
+    pipenv run flake8 .
+    pipenv run py.test tests
 [flake8]
 exclude = .tox,*.egg,build,data
 select = E,W,F
